added user database and register page

--- a/application/templates/my-songs.html
+++ b/application/templates/my-songs.html
@@ -7,7 +7,7 @@
 {% block content %}
     
     <div class="input-group">
-        <input class=" border rounded-pill" type="text" value="search" id="search-input-yt">
+        <input class=" border rounded-pill" type="text" placeholder="Search for songs" id="search-input-yt">
         <span class="input-group-append">
             <button id="search-btn-yt" class="btn btn-outline-secondary bg-white border-start-0 border rounded-pill ms-n3" type="button">
                 <i class="fa fa-search"></i>
