--- a/application/templates/search.html
+++ b/application/templates/search.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <div class="input-group">
-        <input class=" border rounded-pill" type="text" value="search" id="search-input-yt">
+        <input class=" border rounded-pill" type="text" placeholder="Search for tabs" id="search-input-yt">
         <span class="input-group-append">
             <button id="search-btn-yt" class="btn btn-outline-secondary bg-white border-start-0 border rounded-pill ms-n3" type="button">
                 <i class="fa fa-search"></i>
@@ -37,6 +37,7 @@
                 {% endfor %}
         </tbody>
     </table>
+    {{ tabs }}
     <style>
         #input-group {
             display: flex;
