--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -13,28 +13,7 @@
 
             {% endblock %}
         </title>
-        <style>
-            body {
-                background-color: #212121;
-                color: white
-            }
-        
-            #icon {
-                -webkit-filter: invert(1);
-                filter: invert(1);
-                margin-right: 10px;
-            }
-        
-            footer {
-                bottom: 0;
-                margin: 0;
-                text-align: center;
-                width: 100%;
-                position: relative;
-            }
-        </style>
     </head>
-
     <body>
         <!-- Navbar here -->
         <nav id="navigation" class="navbar navbar-expand-md navbar-dark bg-dark">
@@ -87,11 +66,32 @@
             crossorigin="anonymous"></script>
     </body>
     
-    <footer class="bg-dark">
+    <footer class=" footer bg-dark">
         <p> &copy; Csontos Réka Hanga</p>
         <p>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a
                 href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></p>
         <p>Image by <a href="https://pixabay.com/users/pexels-2286921/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=1851426">Pexels</a> 
             from <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=1851426">cmdPixabay</a></p>
     </footer>
+    <style>
+        body {
+            background-color: #212121;
+            color: white
+        }
+    
+        #icon {
+            -webkit-filter: invert(1);
+            filter: invert(1);
+            margin-right: 10px;
+        }
+    
+        .footer {
+            bottom: 0;
+            margin: 0;
+            text-align: center;
+            width: 100%;
+            position: relative;
+        }
+    </style>
+
 </html>
