--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -5,5 +5,45 @@
 {% endblock %}
 
 {% block content %}
-    <p>This is my home page</p>
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="https://cdn.pixabay.com/photo/2016/03/26/22/36/man-1281642_960_720.jpg" alt="First slide" style="height: 650px; opacity: 0.5;">
+        <div class="carousel-caption d-none d-md-block">
+            <h1>Start learning guitar now!</h1>
+            <h3 style="font-weight: normal;">Find guitar tabs with videos and play along! You're gonna be a rockstar in no time!</h3>
+            <button class="btn btn-info btn-lg" href="#">Search for your favourite songs</button>
+        </div>
+    </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="https://cdn.pixabay.com/photo/2016/11/18/19/55/guitar-1836655_960_720.jpg" alt="Second slide" style="height: 650px; opacity: 0.5;">
+        <div class="carousel-caption d-none d-md-block">
+            <h1>Save your songs</h1>
+            <h3 style="font-weight: normal;">Keep forgetting the songs you can already play? You can save them and find them later on the My Songs page!</h3>
+            <button class="btn btn-info btn-lg" href="#">Sing up to use this feature</button>
+        </div>
+    </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="https://cdn.pixabay.com/photo/2016/11/18/15/44/audience-1835431_960_720.jpg" alt="Third slide" style="height: 650px; opacity: 0.5;">
+        <div class="carousel-caption d-none d-md-block">
+            <h1>Create a Wishlist</h1>
+            <h3 style="font-weight: normal;">If you have a list of songs you'd like to learn in the future, then add them to your Wishlist! When you finished learning them, you can easily add them to your My Songs list!</h3>
+            <button class="btn btn-info btn-lg" href="#">Sing up to use this feature</button>
+        </div>
+    </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
 {% endblock %}
