--- a/application/templates/register.html
+++ b/application/templates/register.html
@@ -13,6 +13,8 @@ Register Page
         </h1>
         <br>
         <form method="POST" class="form-register" style="color: white;">
+            {{ form.hidden_tag() }}
+            
             {{ form.username.label() }}
             {{ form.username(class="form-control", placeholder="User Name") }}
         
