--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -35,14 +35,30 @@
                         <a class="nav-link" href="{{ url_for('mysongs_page') }}">My Songs</a>
                     </li>
                 </ul>
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('login_page') }}">Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('register_page') }}">Register</a>
-                    </li>
-                </ul>
+
+                {% if current_user.is_authenticated %}
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link">
+                                <i class="fas fa-user mr-2" style="color:turquoise;"> {{ current_user.username }}</i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('logout_page') }}">Logout</a>
+                        </li>
+                    </ul>
+
+                {% else %}
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('login_page') }}">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('register_page') }}">Register</a>
+                        </li>
+                    </ul>
+                {% endif %}
+                
             </div>
         </nav>
 
