--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -15,24 +15,24 @@
       <div class="carousel-item active">
         <img class="d-block w-100" src="https://cdn.pixabay.com/photo/2016/03/26/22/36/man-1281642_960_720.jpg" alt="First slide" style="height: 650px; opacity: 0.5;">
         <div class="carousel-caption d-none d-md-block">
-            <h1>Start learning guitar now!</h1>
-            <h3 style="font-weight: normal;">Find guitar tabs with videos and play along! You're gonna be a rockstar in no time!</h3>
+            <h1 class="display-4 font-weight-normal">Start learning guitar now!</h1>
+            <p class="lead font-weight-normal">Find guitar tabs with videos and play along! You're gonna be a rockstar in no time!</p>
             <a class="btn btn-info btn-lg" href="{{ url_for('search_page') }}">Search for your favourite songs</a>
         </div>
     </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="https://cdn.pixabay.com/photo/2016/11/18/19/55/guitar-1836655_960_720.jpg" alt="Second slide" style="height: 650px; opacity: 0.5;">
         <div class="carousel-caption d-none d-md-block">
-            <h1>Save your songs</h1>
-            <h3 style="font-weight: normal;">Keep forgetting the songs you can already play? You can save them and find them later on the My Songs page!</h3>
+            <h1 class="display-4 font-weight-normal">Save your songs</h1>
+            <p class="lead font-weight-normal">Keep forgetting the songs you can already play? You can save them and find them later on the My Songs page!</p>
             <a class="btn btn-info btn-lg" href="{{ url_for('register_page') }}">Sing up to use this feature</a>
         </div>
     </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="https://cdn.pixabay.com/photo/2016/11/18/15/44/audience-1835431_960_720.jpg" alt="Third slide" style="height: 650px; opacity: 0.5;">
         <div class="carousel-caption d-none d-md-block">
-            <h1>Create a Wishlist</h1>
-            <h3 style="font-weight: normal;">If you have a list of songs you'd like to learn in the future, then add them to your Wishlist! When you finished learning them, you can easily add them to your My Songs list!</h3>
+            <h1 class="display-4 font-weight-normal">Create a Wishlist</h1>
+            <p class="lead font-weight-normal">If you have a list of songs you'd like to learn in the future, then add them to your Wishlist! When you finished learning them, you can easily add them to your My Songs list!</p>
             <a class="btn btn-info btn-lg" href="{{ url_for('register_page') }}">Sing up to use this feature</a>
         </div>
     </div>
