mysongs page now require login

--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -25,7 +25,7 @@
         <div class="carousel-caption d-none d-md-block">
             <h1 class="display-4 font-weight-normal">Save your songs</h1>
             <p class="lead font-weight-normal">Keep forgetting the songs you can already play? You can save them and find them later on the My Songs page!</p>
-            <a class="btn btn-info btn-lg" href="{{ url_for('register_page') }}">Sing up to use this feature</a>
+            <a class="btn btn-info btn-lg" href="{{ url_for('mysongs_page') }}">Sing up to use this feature</a>
         </div>
     </div>
       <div class="carousel-item">
