--- a/application/templates/search.html
+++ b/application/templates/search.html
@@ -37,7 +37,33 @@
                 {% endfor %}
         </tbody>
     </table>
-    {{ tabs }}
+
+    <table class="table table-hover table-dark">
+        <thead>
+            <tr>
+                <!-- Your Columns HERE -->
+                <th scope="col">Id</th>
+                <th scope="col">Artist</th>
+                <th scope="col">Title</th>
+                <th scope="col">Type</th>
+                <th scope="col">Options</th>
+            </tr>
+        </thead>
+        <tbody>
+            <!-- Your rows inside the table HERE: -->
+                {% for tab in tabs %}
+                    <tr>
+                        <td>{{ tab[0] }}</td>
+                        <td>{{ tab[1] }}</td>
+                        <td>{{ tab[2] }}</td>
+                        <td>{{ tab[3] }}</td>
+                        <td>
+                            <button class="btn btn-outline btn-info">Choose this tab</button>
+                        </td>
+                    </tr>
+                {% endfor %}
+        </tbody>
+    </table>
     <style>
         #input-group {
             display: flex;
