--- a/application/templates/search.html
+++ b/application/templates/search.html
@@ -13,57 +13,68 @@
             </button>
         </span>
     </div>
-    <table class="table table-hover table-dark">
-        <thead>
-            <tr>
-                <!-- Your Columns HERE -->
-                <th scope="col">Thumbnail</th>
-                <th scope="col">Title</th>
-                <th scope="col">Video Url</th>
-                <th scope="col">Options</th>
-            </tr>
-        </thead>
-        <tbody>
-            <!-- Your rows inside the table HERE: -->
-                {% for item in items %}
-                    <tr>
-                        <td><img src={{ item.thumbnail_url }} class="img-responsive"></td>
-                        <td>{{ item.title }}</td>
-                        <td>{{ item.video_url }}</td>
-                        <td>
-                            <button class="btn btn-outline btn-info">Choose this video</button>
-                        </td>
-                    </tr>
-                {% endfor %}
-        </tbody>
-    </table>
 
-    <table class="table table-hover table-dark">
-        <thead>
-            <tr>
-                <!-- Your Columns HERE -->
-                <th scope="col">Id</th>
-                <th scope="col">Artist</th>
-                <th scope="col">Title</th>
-                <th scope="col">Type</th>
-                <th scope="col">Options</th>
-            </tr>
-        </thead>
-        <tbody>
-            <!-- Your rows inside the table HERE: -->
-                {% for tab in tabs %}
+    <div class="row" style="margin-top:20px; margin-left: 10px; margin-right: 10px">
+        <div class="col-7">
+            <h2>Tabs search results</h2>
+            <p>Choose one from the tabs by clicking the blue button.</p>
+            <table class="table table-hover table-dark">
+                <thead>
                     <tr>
-                        <td>{{ tab[0] }}</td>
-                        <td>{{ tab[1] }}</td>
-                        <td>{{ tab[2] }}</td>
-                        <td>{{ tab[3] }}</td>
-                        <td>
-                            <button class="btn btn-outline btn-info">Choose this tab</button>
-                        </td>
+                        <!-- Your Columns HERE -->
+                        <th scope="col">Id</th>
+                        <th scope="col">Artist</th>
+                        <th scope="col">Title</th>
+                        <th scope="col">Type</th>
+                        <th scope="col">Options</th>
                     </tr>
-                {% endfor %}
-        </tbody>
-    </table>
+                </thead>
+                <tbody>
+                    <!-- Your rows inside the table HERE: -->
+                        {% for tab in tabs %}
+                            <tr>
+                                <td>{{ tab[0] }}</td>
+                                <td>{{ tab[1] }}</td>
+                                <td>{{ tab[2] }}</td>
+                                <td>{{ tab[3] }}</td>
+                                <td>
+                                    <button class="btn btn-outline btn-info">Choose this tab</button>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    
+        <div class="col-5">
+            <h2>Video search results</h2>
+            <p>Choose one from the YouTube videos by clicking the blue button.</p>
+            <table class="table table-hover table-dark">
+                <thead>
+                    <tr>
+                        <!-- Your Columns HERE -->
+                        <th scope="col">Thumbnail</th>
+                        <th scope="col">Title</th>
+                        <th scope="col">Options</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- Your rows inside the table HERE: -->
+                        {% for item in items %}
+                            <tr>
+                                <td><img src={{ item.thumbnail_url }} class="img-responsive"></td>
+                                <td>{{ item.title }}</td>
+                                <td>
+                                    <button class="btn btn-outline btn-info">Choose this video</button>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+        
+    
     <style>
         #input-group {
             display: flex;
