--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -34,6 +34,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('mysongs_page') }}">My Songs</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('whislist_page') }}">Whislist</a>
+                    </li>
                 </ul>
 
                 {% if current_user.is_authenticated %}
