added add function to wishlist

--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -35,7 +35,7 @@
                         <a class="nav-link" href="{{ url_for('mysongs_page') }}">My Songs</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('whislist_page') }}">Whislist</a>
+                        <a class="nav-link" href="{{ url_for('wishlist_page') }}">Wishlist</a>
                     </li>
                 </ul>
 
