--- a/application/templates/my-songs.html
+++ b/application/templates/my-songs.html
@@ -36,6 +36,9 @@
                         <td>{{ song.tuning }}</td>
                         <td>
                             <button class="btn btn-outline btn-info">Choose this tab</button>
+                            <button class="btn btn-outline btn-danger">Delete  
+                                <i class="fa fa-trash" aria-hidden="true"></i>
+                            </button>
                         </td>
                     </tr>
                 {% endfor %}
