--- a/application/templates/wishlist.html
+++ b/application/templates/wishlist.html
@@ -38,9 +38,10 @@
                     <td>
                         <button class="btn btn-outline btn-info">Search for tabs</button>
                         <button class="btn btn-outline btn-info">Add to My Songs</button>
-                        <button class="btn btn-outline btn-danger">Delete  
+                        <a class="btn btn-outline btn-danger" href="{{ url_for('delete_from_wishlist_page') }}">Delete  
                             <i class="fa fa-trash" aria-hidden="true"></i>
-                        </button>
+                            <input id="delete_song" name="delete_song" type="hidden" value='{{ song.artist }}, {{ song.song }}'>
+                        </a>
                     </td>
                 </tr>
             {% endfor %}
