added buttons to tab page

--- a/application/templates/search.html
+++ b/application/templates/search.html
@@ -16,7 +16,9 @@
                     {{ form.song(class="form-control border rounded-pill", placeholder="Song Title") }}
                 </div>
                 <div class="col-1">
-                    <button type=submit class="btn btn-outline-secondary bg-white border-start-0 border rounded-pill ms-n3"><span class="fa fa-search"></span></button>
+                    <button type=submit class="btn btn-outline-secondary bg-white border-start-0 border rounded-pill ms-n3">
+                        <span class="fa fa-search"></span>
+                    </button>
                 </div>
             </div>
         </form>
