--- a/application/templates/my-songs.html
+++ b/application/templates/my-songs.html
@@ -36,9 +36,11 @@
                                 <input type="hidden", name="video_url", value="https://www.youtube.com/watch?v={{ song.video_id }}">
                                 <button type=submit class="btn btn-outline btn-info">Go to Tab</button>
                             </form>
-                            <button class="btn btn-outline btn-danger">Delete  
-                                <i class="fa fa-trash" aria-hidden="true"></i>
-                            </button>
+                            <form action="{{ url_for('delete_song_page') }}" method=post class=delete-song>
+                                <input type="hidden" name="database" value="My_Songs">
+                                <input type=hidden value="{{ song.title }}" name=song_to_delete />
+                                <input type=submit value='Delete' class="btn btn-outline btn-danger"></input>
+                            </form>
                         </td>
                     </tr>
                 {% endfor %}
