--- a/application/templates/wishlist.html
+++ b/application/templates/wishlist.html
@@ -36,11 +36,16 @@
                     <td>{{ song.artist }}</td>
                     <td>{{ song.song }}</td>
                     <td>
-                        <button class="btn btn-outline btn-info">Search for tabs</button>
+                        <form action="{{ url_for('search_page') }}" method=post>
+                            <input type=hidden value="{{ song.artist }}" name="artist"/>
+                            <input type=hidden value="{{ song.song }}" name="song">
+                            <input type=submit value='Search for tabs' class="btn btn-outline btn-info">
+                        </form>
+
                         <form action="{{ url_for('delete_song_page') }}" method=post class=delete-song>
                             <input type="hidden" name="database" value="Wishlist">
                             <input type=hidden value="{{ song.artist }}, {{ song.song }}"name=song_to_delete />
-                            <input type=submit value='Delete' class="btn btn-outline btn-danger"></input>
+                            <input type=submit value='Delete' class="btn btn-outline btn-danger">
                         </form>
                     </td>
                 </tr>
