--- a/application/templates/helpers/song_modals.html
+++ b/application/templates/helpers/song_modals.html
@@ -10,7 +10,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Add Song to Whislist</h5>
+                <h5 class="modal-title">Add Song to Wishlist</h5>
                 <button type="button" class="close" 
                         data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
