--- a/application/templates/my-songs.html
+++ b/application/templates/my-songs.html
@@ -27,12 +27,16 @@
                                 <form action="{{ url_for('tab_page') }}" method="POST" style="margin-right: 10px">
                                     <input type="hidden" name="tab_url" value="{{ song.tab_url }}">
                                     <input type="hidden", name="video_url", value="https://www.youtube.com/watch?v={{ song.video_id }}">
-                                    <button type=submit class="btn btn-outline btn-info">Go to Tab</button>
+                                    <button type=submit class="btn btn-outline btn-info">
+                                        <i class="fas fa-arrow-circle-right"></i> Go to Tab
+                                    </button>
                                 </form>
                                 <form action="{{ url_for('delete_song_page') }}" method=post class=delete-song>
                                     <input type="hidden" name="database" value="My_Songs">
                                     <input type=hidden value="{{ song.title }}" name=song_to_delete />
-                                    <button type=submit class="btn btn-outline btn-danger">Delete</button>
+                                    <button type=submit class="btn btn-outline btn-danger">
+                                        <i class="fas fa-trash-alt"></i> Delete
+                                    </button>
                                 </form>
                             </div>
                         </td>
