--- a/application/templates/my-songs.html
+++ b/application/templates/my-songs.html
@@ -25,6 +25,7 @@
                         <td>
                             <div class="row"> 
                                 <form action="{{ url_for('tab_page') }}" method="POST" style="margin-right: 10px">
+                                    <input type="hidden" name="title" value="{{ song.title }}">
                                     <input type="hidden" name="tab_url" value="{{ song.tab_url }}">
                                     <input type="hidden", name="video_url", value="https://www.youtube.com/watch?v={{ song.video_id }}">
                                     <button type=submit class="btn btn-outline btn-info">
